<resources>
    <string name="app_name">Bongo Talkies</string>
    <string name="screen_top_rate_movies">Top Rated Movies</string>
    <string name="empty_data">No data found</string>
    <string name="cd">image</string>
    <string name="exit_msg">Press again to exit</string>
    <string name="description">Description</string>
    <string name="genres">Genres</string>
    <string name="collection">Collection</string>
    <string name="details">Details</string>
    <string name="release">Release</string>
    <string name="language">Language</string>
    <string name="length">Length</string>
    <string name="production">Production</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="try_again">Try again</string>
</resources>